# cpp-gamemode-samp

./: .gitignore  .gitmodules  CMakeLists.txt  dawn.mwb  dawn.mwb.bak
Area/: CArea.h
Company/: CCompany.cpp  CCompany.h
House/: CHouse.h
MCore/: MCallbacks.cpp  MDialog.cpp  MDialog.h  callbacks.def
MySQL/: CMySQL.cpp  CMySQLConnection.cpp  CMySQLConnection.h  CMySQLQuery.cpp  CMySQLQuery.h
Player/: CChar.cpp  CChar.h  Player-CB.cpp
Plugin/: MapAndreas.h
System/: CTimer.cpp  Utils.cpp
System/Item/: CInventory.h  CItem.h  CItemHandler.cpp  CItemHandler.h  CItemProperties.h
Textdraw/: CFadeableTextDraw.h  CPlayerTextDraw.h  CTextDraw.cpp  CTextDraw.h  CTextDrawFade.cpp  CTextDrawMenu.cpp  CTextDrawMenu.h
Time/: CTime.cpp  CTime.h
Vehicle/: CVehicle.cpp  CVehicleGame.h  Vehicle-CMD.cpp  VehicleData.h
src/: CMakeLists.txt  version.hpp.in
src/Area/: CArea.cpp  CMakeLists.txt
src/Company/: CMakeLists.txt  Company-CB.cpp  Company-CMD.cpp
src/House/: CHouse.cpp  CMakeLists.txt  House-CB.cpp  House-CMD.cpp
src/MCore/: CMakeLists.txt  MCallbacks.cpp  MCore.cpp  MCore.h
src/MySQL/: CMakeLists.txt  CMySQL.h  CMySQLConnection.cpp  CMySQLQuery.cpp
src/Player/: CMakeLists.txt  CPlayer.h  CPlayerGame.h  Player-CB.cpp  Player-CMD.cpp  Player-Func.cpp
src/Plugin/: CMakeLists.txt  MapAndreas.h  Streamer.cpp  Streamer.h
src/System/: CDispatcher.cpp  CDispatcher.hpp  CMakeLists.txt  CTimer.h  Colors.h  Utils.cpp  Utils.h
src/System/Item/: CInventory.cpp  CItem.cpp  CItemHandler.cpp  CItemProperties.cpp  CMakeLists.txt
src/System/bcrypt/: CMakeLists.txt  bcrypt.c
src/Textdraw/: CMakeLists.txt  CPlayerTextDraw.cpp  CPlayerTextDraw.h  CTextDraw.cpp  CTextDraw.h  CTextDrawFade.cpp  CTextDrawFade.h
src/Time/: CMakeLists.txt
src/Vehicle/: CMakeLists.txt  CVehicle.h  CVehicleGame.h  Vehicle-CB.cpp  Vehicle-CMD.cpp
